@@ -1,7 +1,7 @@
 .\" Process this file with
 .\" groff -man -Tascii foo.1
 .\"
-.TH "check_ssl_cert" 1 "February, 2017" "1.40.0" "USER COMMANDS"
+.TH "check_ssl_cert" 1 "February, 2017" "1.41.0" "USER COMMANDS"
 .SH NAME
 check_ssl_cert \- checks the validity of X.509 certificates
 .SH SYNOPSIS
@@ -114,6 +114,9 @@ allows self-signed certificates
 .TP
 .BR "   --serial serialnum"
 pattern to match the serial number
+.TP
+.BR "   --sni name"
+sets the TLS SNI (Server Name Indication) extension in the ClientHello message to 'name'
 .TP
 .BR "   --ssl2"
 force SSL version 2
